--- a/SchoolOfScience/SchoolOfScience/Base.lproj/Main.storyboard
+++ b/SchoolOfScience/SchoolOfScience/Base.lproj/Main.storyboard
@@ -1579,6 +1579,7 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="roX-KH-dqW">
                                 <rect key="frame" x="16" y="32" width="100" height="36"/>
+                                <accessibility key="accessibilityConfiguration" hint="rmitButton" identifier="rmitButton" label="rmitButton"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="36" id="8ZH-kr-cEU"/>
                                     <constraint firstAttribute="width" constant="100" id="NYt-jl-NVp"/>
