--- a/SchoolOfScience/SchoolOfScience/Base.lproj/Main.storyboard
+++ b/SchoolOfScience/SchoolOfScience/Base.lproj/Main.storyboard
@@ -490,7 +490,7 @@
                                     <constraint firstAttribute="width" constant="30" id="7tF-8l-3Ac"/>
                                     <constraint firstAttribute="height" constant="30" id="bge-lS-ixl"/>
                                 </constraints>
-                                <state key="normal" image="timer"/>
+                                <state key="normal" image="timer-red"/>
                                 <connections>
                                     <segue destination="lqb-fy-hr9" kind="show" id="k8Q-Hp-Tuh"/>
                                 </connections>
@@ -569,7 +569,7 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="See All" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oHF-JN-Ek0">
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="See All" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oHF-JN-Ek0">
                                 <rect key="frame" x="317" y="359" width="42" height="16"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="16" id="A3p-gb-7dG"/>
@@ -1104,11 +1104,25 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ICC-kD-h8M">
+                                <rect key="frame" x="325" y="86" width="34" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="34" id="V2c-dw-JIc"/>
+                                    <constraint firstAttribute="height" constant="30" id="l7Y-9s-Xoe"/>
+                                </constraints>
+                                <state key="normal" title="Back">
+                                    <color key="titleColor" red="0.85819262269999996" green="0.26879343389999999" blue="0.19957771899999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
+                                <connections>
+                                    <action selector="backButtonTapped:" destination="Kpe-bI-DPs" eventType="touchUpInside" id="q6e-ar-UMs"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="aOD-Vr-9hb" firstAttribute="bottom" secondItem="wo8-Y7-5h6" secondAttribute="bottom" id="0NR-Bw-YoS"/>
                             <constraint firstItem="hfa-nK-hVl" firstAttribute="leading" secondItem="aOD-Vr-9hb" secondAttribute="leading" constant="16" id="2Wx-4C-zn0"/>
+                            <constraint firstItem="aOD-Vr-9hb" firstAttribute="trailing" secondItem="ICC-kD-h8M" secondAttribute="trailing" constant="16" id="DhZ-W4-KuU"/>
                             <constraint firstItem="hfa-nK-hVl" firstAttribute="top" secondItem="aOD-Vr-9hb" secondAttribute="top" constant="109" id="GbI-PL-0ID"/>
                             <constraint firstItem="5Pj-Gq-Je0" firstAttribute="top" secondItem="aOD-Vr-9hb" secondAttribute="top" constant="12" id="I4s-tm-FU0"/>
                             <constraint firstItem="wo8-Y7-5h6" firstAttribute="top" secondItem="hfa-nK-hVl" secondAttribute="bottom" id="IXq-bK-GzH"/>
@@ -1116,6 +1130,7 @@
                             <constraint firstItem="Fka-m7-k2Z" firstAttribute="leading" secondItem="nfv-Xb-PyZ" secondAttribute="trailing" constant="8" id="OCY-X0-Dbt"/>
                             <constraint firstItem="aOD-Vr-9hb" firstAttribute="trailing" secondItem="wo8-Y7-5h6" secondAttribute="trailing" constant="16" id="QDS-YS-48p"/>
                             <constraint firstItem="aOD-Vr-9hb" firstAttribute="trailing" secondItem="G4K-kl-oBp" secondAttribute="trailing" constant="16" id="ZN6-ee-s8b"/>
+                            <constraint firstItem="G4K-kl-oBp" firstAttribute="top" secondItem="ICC-kD-h8M" secondAttribute="bottom" constant="8" id="bEk-jM-0FE"/>
                             <constraint firstItem="G4K-kl-oBp" firstAttribute="centerX" secondItem="jGW-Gt-ek6" secondAttribute="centerX" id="ds3-8F-VSG"/>
                             <constraint firstItem="G4K-kl-oBp" firstAttribute="leading" secondItem="aOD-Vr-9hb" secondAttribute="leading" constant="16" id="fbU-zB-tLM"/>
                             <constraint firstItem="G4K-kl-oBp" firstAttribute="top" secondItem="nfv-Xb-PyZ" secondAttribute="bottom" constant="5" id="gCZ-2m-Sy0"/>
@@ -1278,7 +1293,7 @@
                                     <constraint firstAttribute="height" constant="30" id="bMZ-dV-xhG"/>
                                     <constraint firstAttribute="width" constant="30" id="sId-oZ-8AJ"/>
                                 </constraints>
-                                <state key="normal" image="timer"/>
+                                <state key="normal" image="timer-red"/>
                                 <connections>
                                     <segue destination="lqb-fy-hr9" kind="show" id="nan-xc-htM"/>
                                 </connections>
@@ -1347,7 +1362,7 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="See All" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r9K-d6-xUP">
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="See All" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r9K-d6-xUP">
                                 <rect key="frame" x="317" y="359" width="42" height="16"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="42" id="4e7-nL-x2W"/>
@@ -1680,10 +1695,24 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nvd-Hm-YVY">
+                                <rect key="frame" x="325" y="86" width="34" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="34" id="DpR-Gf-l3W"/>
+                                    <constraint firstAttribute="height" constant="30" id="VUi-WJ-eg9"/>
+                                </constraints>
+                                <state key="normal" title="Back">
+                                    <color key="titleColor" red="0.85819262269999996" green="0.26879343389999999" blue="0.19957771899999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
+                                <connections>
+                                    <action selector="backButtonTapped:" destination="lqb-fy-hr9" eventType="touchUpInside" id="iXb-EG-PSO"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                         <constraints>
                             <constraint firstItem="S2h-U1-bNH" firstAttribute="leading" secondItem="Ugj-YW-ye3" secondAttribute="trailing" constant="8" id="2UK-yc-XLy"/>
+                            <constraint firstItem="65R-aE-vb6" firstAttribute="top" secondItem="nvd-Hm-YVY" secondAttribute="bottom" constant="8" id="3oy-gc-Xlt"/>
                             <constraint firstItem="jod-SU-VOj" firstAttribute="trailing" secondItem="yD9-zl-BOe" secondAttribute="trailing" constant="-16" id="6bP-2c-c5u"/>
                             <constraint firstItem="jod-SU-VOj" firstAttribute="bottom" secondItem="yD9-zl-BOe" secondAttribute="bottom" id="H0N-Sw-6t5"/>
                             <constraint firstItem="65R-aE-vb6" firstAttribute="top" secondItem="Ugj-YW-ye3" secondAttribute="bottom" constant="5" id="Jsn-3t-rcI"/>
@@ -1696,6 +1725,7 @@
                             <constraint firstItem="roX-KH-dqW" firstAttribute="leading" secondItem="yD9-zl-BOe" secondAttribute="leading" constant="16" id="fQ4-GW-mmq"/>
                             <constraint firstItem="Ugj-YW-ye3" firstAttribute="leading" secondItem="yD9-zl-BOe" secondAttribute="leading" constant="16" id="oMK-Rp-Ts3"/>
                             <constraint firstItem="jod-SU-VOj" firstAttribute="leading" secondItem="yD9-zl-BOe" secondAttribute="leading" constant="16" id="ozz-U6-eIU"/>
+                            <constraint firstItem="yD9-zl-BOe" firstAttribute="trailing" secondItem="nvd-Hm-YVY" secondAttribute="trailing" constant="16" id="tEB-eA-Cdi"/>
                             <constraint firstItem="Ugj-YW-ye3" firstAttribute="top" secondItem="roX-KH-dqW" secondAttribute="bottom" constant="16" id="z1b-8d-oau"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="yD9-zl-BOe"/>
@@ -1941,6 +1971,7 @@
         <image name="settings" width="80" height="80"/>
         <image name="settings-25" width="25" height="25"/>
         <image name="timer" width="80" height="80"/>
+        <image name="timer-red" width="80" height="80"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="k8Q-Hp-Tuh"/>
